Remove justify-content center from mycoll-ad-content selector. Fixes alignment of pics.

--- a/styles/my-collection.scss
+++ b/styles/my-collection.scss
@@ -24,7 +24,6 @@
 .mycoll-ad-content {
   display: flex;
   align-items: center;
-  justify-content: center;
 }
 
 .mycoll-ad-desc {
